--- a/ar/index.html
+++ b/ar/index.html
@@ -52,7 +52,7 @@
             <a-marker
                 type="pattern"
                 preset="custom"
-                url="assets/marker.patt"
+                url="assets/pattern-1-1.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
