--- a/ar/gitee.html
+++ b/ar/gitee.html
@@ -22,7 +22,7 @@
   <div style="position: absolute; z-index: 1000">
     <button id="example-start-button">重新加载</button>
   </div>
-  <a-scene mindar-image="imageTargetSrc: ./targets2.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/2.png" />
