--- a/ar/index.html
+++ b/ar/index.html
@@ -24,7 +24,7 @@
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/2.png" />
-      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./asset.mp4" playsinline webkit-playsinline></video>
+      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./video~1.mp4" playsinline webkit-playsinline></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled:  false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable"></a-camera>
