--- a/ar/index.html
+++ b/ar/index.html
@@ -9,7 +9,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR相机</title>
+  <title>AR-Camera</title>
   <script src="./js/aframe.min.js"></script>
   <script src="./js/mindar-image-aframe.prod.js"></script>
 
@@ -20,7 +20,7 @@
   <div style="position: absolute; z-index: 1000">
     <button id="example-start-button">重新載入</button>
   </div>
-  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: ./targets2.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/2.png" />
