--- a/ar/index.html
+++ b/ar/index.html
@@ -20,11 +20,11 @@
   <div style="position: absolute; z-index: 1000">
     <button id="example-start-button">重新載入</button>
   </div>
-  <a-scene mindar-image="imageTargetSrc: ./targets2.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/2.png" />
-      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./1234.mp4" playsinline webkit-playsinline></video>
+      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./video~1.mp4" playsinline webkit-playsinline></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled:  false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable"></a-camera>
