--- a/ar/index.html
+++ b/ar/index.html
@@ -97,7 +97,7 @@
         arSystem.pause(true);
       });
       sceneEl.addEventListener("arReady", (event) => {
-        alert('AR引擎已启动')
+        // alert('AR引擎已启动')
       });
       sceneEl.addEventListener("arError", (event) => {
         alert('相机未启动成功！')
