--- a/ar/index.html
+++ b/ar/index.html
@@ -11,7 +11,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR相机</title>
+  <title>AR</title>
   <script src="./js/aframe.min.js"></script>
   <script src="./js/mindar-image-aframe.prod.js"></script>
 
@@ -20,9 +20,9 @@
 
 <body>
   <div style="position: absolute; z-index: 1000">
-    <button id="example-start-button">重新加载</button>
+    <button id="example-start-button">Reload</button>
   </div>
-  <a-scene mindar-image="imageTargetSrc: ./targets2.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+  <a-scene mindar-image="imageTargetSrc: ./targets3.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/2.png" />
