--- a/ar/index.html
+++ b/ar/index.html
@@ -33,7 +33,7 @@
     <a-assets>
       <img id="paintandquest-preview" src="./images/opc.png" />
       <img id="paintandquest-preview2" src="./images/22.png" />
-      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./123456.mp4" playsinline webkit-playsinline></video>
+      <video id="paintandquest-video-mp4" autoplay="false" loop="true" src="./123456.mp4" playsinline webkit-playsinline style="position: relative; top: -100px;"></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled:  false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 10000; objects: .clickable"></a-camera>
@@ -43,7 +43,7 @@
         </a-image>
         <a-image id="paintandquest-preview-button2" class="clickable" src="#paintandquest-preview2" alpha-test="0.5" position="0 0 0.05" height="0.552" width="1">
         </a-image>
-        <a-video id="paintandquest-video-link" webkit-playsinline playsinline width="1" height="0.552" position="0 0.5 0"></a-video>
+        <a-video id="paintandquest-video-link" webkit-playsinline playsinline width="1" height="0.552" position="0 -0.5 0"></a-video>
       </a-entity>
     </a-entity>
   </a-scene>
