--- a/ar/index.html
+++ b/ar/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div style="position: absolute; z-index: 1000">
-    <button id="example-start-button">Reload</button>
+    <!-- <button id="example-start-button">Reload</button> -->
   </div>
   <a-scene mindar-image="imageTargetSrc: ./targets17.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
