--- a/ar/index.html
+++ b/ar/index.html
@@ -47,7 +47,7 @@
   </a-scene>
   <script>
     const vConsole = new VConsole()
-    console.log(vConsole);
+    // console.log(vConsole);
   </script>
   <script>
     const portfolio = document.querySelector("#portfolio-panel");
