--- a/ar/index.html
+++ b/ar/index.html
@@ -46,7 +46,7 @@
     </a-entity>
   </a-scene>
   <script>
-    const vConsole = new VConsole()
+    // const vConsole = new VConsole()
     // console.log(vConsole);
   </script>
   <script>
