--- a/ar/index.html
+++ b/ar/index.html
@@ -15,7 +15,7 @@
   <script src="./js/aframe.min.js"></script>
   <script src="./js/mindar-image-aframe.prod.js"></script>
 
-  <script src="./js/vconsole.min.js"></script>
+  <!-- <script src="./js/vconsole.min.js"></script> -->
   <style>
    
 
