--- a/ar/index.html
+++ b/ar/index.html
@@ -46,8 +46,8 @@
     </a-entity>
   </a-scene>
   <script>
-    // const vConsole = new VConsole()
-    // console.log(vConsole);
+    const vConsole = new VConsole()
+    console.log(vConsole);
   </script>
   <script>
     const portfolio = document.querySelector("#portfolio-panel");
