--- a/idiom/index.html
+++ b/idiom/index.html
@@ -6,6 +6,7 @@
   <title>Draggable Chinese Cards</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"></script>
+  <script src="main.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css" />
   <style>
     html,body{margin:0;padding:0;height:100%;overflow:hidden;background:#f3f4f6;font-family:"Noto Sans TC",sans-serif}
@@ -13,8 +14,8 @@
     #answerZone{position:fixed;bottom:120px;left:50%;transform:translateX(-50%);width:700px;height:170px;border:3px dashed #9ca3af;border-radius:12px;display:flex;align-items:center;justify-content:center;color:#6b7280;font-size:20px;pointer-events:none}
     #randomBtn{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);padding:12px 22px;font-size:18px;background:#2563eb;color:#fff;border:none;border-radius:10px;box-shadow:0 3px 8px rgba(0,0,0,.25);cursor:pointer}
     #randomBtn:hover{background:#1d4ed8}
-    #result{position:fixed;top:20px;left:50%;transform:translateX(-50%);font-size:26px;font-weight:700;color:#16a34a;display:none}
-    #timeoutMsg{position:fixed;top:60px;left:50%;transform:translateX(-50%);font-size:22px;font-weight:600;color:#dc2626;display:none}
+    #result{position:fixed;bottom:0px;left:50%;transform:translateX(-50%);font-size:26px;font-weight:700;color:#16a34a;display:none}
+    #timeoutMsg{position:fixed;bottom:-30px;left:50%;transform:translateX(-50%);font-size:22px;font-weight:600;color:#dc2626;display:none}
     #scoreBoard{position:fixed;top:20px;right:30px;font-size:22px;font-weight:600;color:#1f2937}
     #timer{position:fixed;top:60px;right:30px;font-size:20px;color:#374151}
     #mask,#summaryDlg{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;z-index:50}
@@ -40,7 +41,6 @@
     <button id="startBtn" disabled>開始遊戲</button>
   </div>
 </div>
-
 <div id="summaryDlg" class="dialog" style="display:none"></div>
 <div id="result">✔ 正確！</div>
 <div id="timeoutMsg"></div>
@@ -48,129 +48,5 @@
 <div id="timer">⏱ 0 s</div>
 <div id="answerZone">將 4 張正確字卡拖到此處並依序排列</div>
 <button id="randomBtn" disabled>下一題</button>
-
-<script>
-$(function(){
-  const layout=[{x:40,y:40},{x:220,y:40},{x:400,y:40},{x:40,y:240},{x:220,y:240},{x:400,y:240}],
-        CARD=150, T_LIMIT=30, MAX=10;
-  let bank='', data=[], answer1='', answer2='', question='', user='',
-      start=0, timerID, logged=false, solved=false;
-  let total=0, records=[];
-
-  const srcMap={ any3:'any3words_idiom.json', any2:'any2words_idiom.json', combined:'combined_idioms_fixed.json' };
-
-  function checkReady(){
-    $('#startBtn').prop('disabled', !($('#userNameInput').val().trim() && $('#bankSelect').val()));
-  }
-  $('#userNameInput,#bankSelect').on('input change', checkReady);
-  checkReady();
-
-  $('#startBtn').on('click', async ()=>{
-    user=$('#userNameInput').val().trim();
-    bank=$('#bankSelect').val();
-    try{ data=await (await fetch(srcMap[bank])).json(); }
-    catch{ return alert('題庫載入失敗'); }
-    $('#mask').fadeOut();$('#randomBtn').prop('disabled',false);
-    next();
-  });
-
-  const shuffle=a=>{for(let i=a.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}return a;};
-  function placed(){
-    const t=$('#answerZone').position().top, b=t+$('#answerZone').outerHeight(), arr=[];
-    $('.card').each(function(){const p=$(this).position(), m=p.top+CARD/2; if(m>t&&m<b) arr.push({l:p.left,ch:$(this).text()});});
-    arr.sort((a,b)=>a.l-b.l); return arr.map(o=>o.ch).join('');
-  }
-
-  function startTimer(){
-    start=Date.now(); logged=false; $('#timeoutMsg').hide(); $('#timer').text('⏱ 0 s');
-    clearInterval(timerID);
-    timerID=setInterval(()=>{
-      let s=Math.floor((Date.now()-start)/1000);
-      $('#timer').text(`⏱ ${s} s`);
-      if(s>=T_LIMIT&&!logged) timeout(s);
-    },1000);
-  }
-
-  function timeout(sec){
-    let ansText=answer2?`${answer1} / ${answer2}`:answer1;
-    $('#timeoutMsg').text(`⚠️ 超過 ${T_LIMIT} 秒！答案：${ansText}`).show();
-    end('timeout',sec);
-  }
-
-  async function send(rec){rec.bank=bank;
-    try{ await fetch('log.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(rec)}); }
-    catch(e){console.error(e);}
-  }
-
-  async function end(status,sec){
-    if(logged) return; logged=true; clearInterval(timerID);
-    total+=sec;
-    let rec={name:user,timestamp:new Date().toISOString(),seconds:sec,total,status,question,answer:answer1,final:placed()||''};
-    records.push(rec); await send(rec);
-    $('#scoreBoard').text(`${records.length} / ${MAX}`);
-    if(records.length>=MAX){ $('#randomBtn').prop('disabled',true); summary(); }
-  }
-
-  $('#randomBtn').on('click', ()=>{ if(records.length<MAX) next(); });
-
-  function next(){
-    let it=data[Math.floor(Math.random()*data.length)];
-    if(bank==='combined'){
-      let gen=it.generated||''; answer1=gen.slice(0,4); question=shuffle(gen.slice(0,6).split('')).join('');
-    }else{
-      answer1=it.idiom1; answer2=it.idiom2||''; question=shuffle((bank==='any3'?it.question:it.question).slice(0,6).split('')).join('');
-    }
-    render(question.split('')); startTimer();
-  }
-
-  function render(chars){
-    $('.card').remove(); $('#result').hide(); $('#answerZone').css('border-color','#9ca3af'); solved=false;
-    chars.forEach((ch,i)=>{
-      $('<div class="card"/>').text(ch)
-        .css({left:layout[i].x,top:layout[i].y})
-        .appendTo('body')
-        .draggable({containment:'body',stop:check});
-    });
-  }
-
-  function check(){
-    if(solved||logged) return;
-    let cur=placed(); if(cur.length<4) return;
-    let got=cur.slice(0,4);
-    if(bank==='combined'){
-      if(got===answer1) correct();
-    }else{
-      let answers=[answer1,answer2].filter(Boolean);
-      if(answers.includes(got)) correct();
-    }
-  }
-
-  function correct(){
-    solved=true; $('#result').show(); $('#answerZone').css('border-color','#16a34a');
-    let sec=Math.floor((Date.now()-start)/1000);
-    end('solved',sec);
-  }
-
-  function summary(){
-    let html='<h2 style="margin-top:0">測驗結束</h2>';
-    html+=`<p>總花費時間：<span style="color:#2563eb;font-weight:700">${total}</span> 秒</p>`;
-    html+='<table border="1" cellpadding="6" style="border-collapse:collapse;margin:auto"><tr>'+
-          '<th>#</th><th>狀態</th><th>秒數</th><th>題目</th><th>正確答案</th></tr>';
-    records.forEach((r,i)=>{
-      let col=r.status==='solved'?'#2563eb':'#dc2626';
-      html+=`<tr><td>${i+1}</td><td>${r.status}</td><td>${r.seconds}</td>`+
-            `<td>${r.status==='solved'?'—':r.question}</td>`+
-            `<td style="color:${col}">${r.answer}</td></tr>`;
-    });
-    html+='</table><br/><button id="chooseBankBtn">切換題庫</button>';
-    $('#summaryDlg').html(html).show();
-    $('#chooseBankBtn').on('click',()=>{
-      $('#summaryDlg').hide(); records=[]; total=0;
-      $('#scoreBoard').text(`0 / ${MAX}`); $('#timer').text('⏱ 0 s');
-      $('#mask').fadeIn(); $('#randomBtn').prop('disabled',true);
-    });
-  }
-});
-</script>
 </body>
 </html>
