--- a/idiom/index.html
+++ b/idiom/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Draggable Chinese Cards</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="main.js"></script>
   <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"></script>
-  <script src="main.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css" />
   <style>
     html,body{margin:0;padding:0;height:100%;overflow:hidden;background:#f3f4f6;font-family:"Noto Sans TC",sans-serif}
@@ -15,7 +15,7 @@
     #randomBtn{position:fixed;bottom:30px;left:50%;transform:translateX(-50%);padding:12px 22px;font-size:18px;background:#2563eb;color:#fff;border:none;border-radius:10px;box-shadow:0 3px 8px rgba(0,0,0,.25);cursor:pointer}
     #randomBtn:hover{background:#1d4ed8}
     #result{position:fixed;bottom:0px;left:50%;transform:translateX(-50%);font-size:26px;font-weight:700;color:#16a34a;display:none}
-    #timeoutMsg{position:fixed;bottom:-30px;left:50%;transform:translateX(-50%);font-size:22px;font-weight:600;color:#dc2626;display:none}
+    #timeoutMsg{position:fixed;top:60px;left:50%;transform:translateX(-50%);font-size:22px;font-weight:600;color:#dc2626;display:none}
     #scoreBoard{position:fixed;top:20px;right:30px;font-size:22px;font-weight:600;color:#1f2937}
     #timer{position:fixed;top:60px;right:30px;font-size:20px;color:#374151}
     #mask,#summaryDlg{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;z-index:50}
@@ -41,9 +41,10 @@
     <button id="startBtn" disabled>開始遊戲</button>
   </div>
 </div>
+
 <div id="summaryDlg" class="dialog" style="display:none"></div>
 <div id="result">✔ 正確！</div>
-<div id="timeoutMsg"></div>
+<div id="timeoutMsg" style="position:fixed;bottom:-30px;left:50%;transform:translateX(-50%);font-size:22px;font-weight:600;color:#dc2626;display:none"></div>
 <div id="scoreBoard">0 / 10</div>
 <div id="timer">⏱ 0 s</div>
 <div id="answerZone">將 4 張正確字卡拖到此處並依序排列</div>
