--- a/idiom/index.html
+++ b/idiom/index.html
@@ -30,13 +30,13 @@
 <body>
 <div id="mask">
   <div class="dialog">
-    <h2>請輸入名字並選擇題庫</h2>
-    <input id="userNameInput" placeholder="名字" />
+    <h2>請輸入"學號"並選擇題庫</h2>
+    <input id="userNameInput" placeholder="學號" />
     <select id="bankSelect">
       <option value="" disabled selected>請選擇題庫</option>
-      <option value="any3">題庫A：任三詞題庫</option>
-      <option value="any2">題庫B：任二詞題庫</option>
-      <option value="combined">題庫C：任一詞題庫</option>
+      <option value="any3">題庫A</option>
+      <option value="any2">題庫B</option>
+      <option value="combined">題庫C</option>
     </select>
     <button id="startBtn" disabled>開始遊戲</button>
   </div>
