修改題庫使用方式

--- a/idiom/index.html
+++ b/idiom/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Draggable Chinese Cards</title>
+  <title>互動成語方塊 - 2025</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="main.js"></script>
   <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"></script>
@@ -30,15 +30,13 @@
 <body>
 <div id="mask">
   <div class="dialog">
-    <h2>請輸入"學號"並選擇題庫</h2>
+    <h1>互動成語方塊</h1>
+    <h3>請輸入"學號"並按開始遊戲</h3>
     <input id="userNameInput" placeholder="學號" />
-    <select id="bankSelect">
-      <option value="" disabled selected>請選擇題庫</option>
-      <option value="any3">題庫A</option>
-      <option value="any2">題庫B</option>
-      <option value="combined">題庫C</option>
-    </select>
+   
+  
     <button id="startBtn" disabled>開始遊戲</button>
+    <h4 style="color: #dc2626;">※註：遊戲結束後，請於5/16(五)中午前用100字回傳此互動遊戲的操作心得</h4>
   </div>
 </div>
 
