調整測試對象跟難度

--- a/idiom/index.html
+++ b/idiom/index.html
@@ -36,7 +36,7 @@
    
   
     <button id="startBtn" disabled>開始遊戲</button>
-    <h4 style="color: #dc2626;">※註：遊戲結束後，請於5/16(五)中午前用100字回傳此互動遊戲的操作心得</h4>
+    <h4 style="color: #dc2626;">※註：遊戲結束後，請到eeclass填寫互動遊戲的操作心得</h4>
   </div>
 </div>
 
