--- a/idiom/index.html
+++ b/idiom/index.html
@@ -31,12 +31,12 @@
 <div id="mask">
   <div class="dialog">
     <h1>互動成語方塊</h1>
-    <h3>請輸入"學號"並按開始遊戲</h3>
-    <input id="userNameInput" placeholder="學號" />
+    <h3>請輸入"手機號末6碼"並按開始遊戲</h3>
+    <input id="userNameInput" placeholder="手機號末6碼" />
    
   
     <button id="startBtn" disabled>開始遊戲</button>
-    <h4 style="color: #dc2626;">※註：遊戲結束後，請到eeclass填寫互動遊戲的操作心得</h4>
+    <h4 style="color: #dc2626;">※註：遊戲結束後，請點選以下連結<a href="https://forms.gle/Z3mAG4ovH7Xj56iN8">點選我填</a>填寫使用心得</h4>
   </div>
 </div>
 
