--- a/iot-cross-media/frontend/index.html
+++ b/iot-cross-media/frontend/index.html
@@ -257,12 +257,12 @@
         <div class="container text-center">
             <p class="text-muted mb-1">
                 <i class="fas fa-graduation-cap me-2"></i>
-                IoT Cross-Media 教學系統 - 專為大學教學設計
+                IoT Cross-Media 教學系統 - developed by Kenneth Liu
             </p>
             <p class="text-muted small">
                 使用 jQuery.js + Bootstrap + Node.js 建構 | 
-                <a href="https://github.com" class="text-decoration-none">
-                    <i class="fab fa-github me-1"></i>專案原始碼
+                <a href="https://techart.nthu.edu.tw" class="text-decoration-none">
+                    國立清華大學 科技藝術研究中心 
                 </a>
             </p>
         </div>
