--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="welcome-section">
             <div class="welcome-content">
                 <h1>歡迎來到劉士達老師教學資源中心！</h1>
-                <p>探索跨域技術整合的教學範例與實作專案，從物聯網到擴增實境，開啟跨領域學習的無限可能</p>
+                <p>探索跨域技術整合的教學範例與實作專案，從物聯網到TUI，開啟跨領域學習的無限可能</p>
                 <div class="welcome-time">
                     <i class="fas fa-clock"></i> 
                     <span id="currentTime"></span>
@@ -420,7 +420,7 @@
                     <div class="stat-value">IoT</div>
                     <div class="stat-label">跨媒體整合</div>
                     <div class="stat-description">
-                        物聯網技術與跨媒體整合的完整教學專案，展示現代 IoT 生態系統的建構與應用。
+                        物聯網技術(IoT)與跨媒體整合(Cross-Media)的完整教學專案，展示現代 IoT Cross-Media 生態系統的建構與應用。
                     </div>
                     <ul class="feature-list">
                         <li>MQTT 通訊協定整合</li>
@@ -525,18 +525,18 @@
                             <i class="fas fa-book"></i>
                         </div>
                     </div>
-                    <div class="stat-value">成語</div>
+                    <div class="stat-value">TUI可觸握</div>
                     <div class="stat-label">學習系統</div>
                     <div class="stat-description">
-                        結合傳統文化與現代科技的成語學習平台，提供豐富的成語資料庫與互動學習體驗。
+                        結合Tangible User Interface 的學習平台，提供豐富的資料與互動學習體驗。
                     </div>
                     <ul class="feature-list">
-                        <li>完整的成語資料庫 (JSON格式)</li>
-                        <li>智能成語檢索系統</li>
-                        <li>多詞彙組合查詢功能</li>
-                        <li>文化傳承數位化展示</li>
+                        <li>完整的元件資料庫</li>
+                        <li>智能TUI檢索系統</li>
+                        <li>TUI組合查詢功能</li>
+                        <li>TUI數位化展示</li>
                     </ul>
-                    <a href="idiom/" class="action-btn">
+                    <a href="TUI/" class="action-btn">
                         <i class="fas fa-arrow-right"></i>
                         開始學習
                     </a>
