--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
                 <span>擴增實境</span>
             </a>
 
-            <a href="idiom/" class="menu-item">
+            <a href="TUI/" class="menu-item">
                 <i class="fas fa-book"></i>
-                <span>成語學習</span>
+                <span>TUI學習</span>
             </a>
            
             <!-- <a href="sifteo/" class="menu-item">
@@ -525,8 +525,8 @@
                             <i class="fas fa-book"></i>
                         </div>
                     </div>
-                    <div class="stat-value">TUI可觸握</div>
-                    <div class="stat-label">學習系統</div>
+                    <div class="stat-value">TUI可觸握介面</div>
+                    <div class="stat-label">Tangible User Interface學習系統</div>
                     <div class="stat-description">
                         結合Tangible User Interface 的學習平台，提供豐富的資料與互動學習體驗。
                     </div>
