--- a/frontend-mobile/test-monster.html
+++ b/frontend-mobile/test-monster.html
@@ -56,10 +56,22 @@
         <ul>
             <li>✅ 頁面載入時會隨機選擇一隻小怪物顯示在首頁頂部</li>
             <li>✅ 點擊小怪物圖片可以重新隨機選擇</li>
+            <li>🆕 <strong>點擊「選擇小怪物」按鈕可以打開下拉選單，預覽所有小怪物</strong></li>
+            <li>🆕 <strong>在下拉選單中點擊任意小怪物可以直接選擇</strong></li>
+            <li>🆕 <strong>下拉選單包含「隨機」選項和所有小怪物的縮圖預覽</strong></li>
             <li>✅ 點擊「開啟小怪物」按鈕會顯示全黑背景的全螢幕視窗</li>
             <li>✅ 全螢幕視窗中只顯示小怪物圖片，點擊任意處或按 ESC 關閉</li>
-            <li>✅ 包含平滑的動畫效果</li>
+            <li>✅ 包含平滑的動畫效果和響應式設計</li>
         </ul>
+        
+        <h2>🎮 使用流程:</h2>
+        <ol>
+            <li>打開網頁，自動顯示隨機小怪物</li>
+            <li>點擊「🎭 選擇小怪物」按鈕打開下拉選單</li>
+            <li>在下拉選單中預覽並點擊想要的小怪物</li>
+            <li>點擊「開啟小怪物」按鈕進入全螢幕模式</li>
+            <li>欣賞你選擇的小怪物！</li>
+        </ol>
     </div>
 
     <script>
