增加兩隻小怪物

--- a/frontend-mobile/test-monster.html
+++ b/frontend-mobile/test-monster.html
@@ -44,7 +44,7 @@
     <div class="test-container">
         <h1>🐾 小怪物功能測試</h1>
         
-        <h2>所有可用的小怪物:</h2>
+        <h2>所有可用的小怪物 (共12隻):</h2>
         <div class="monster-list" id="monsterList">
         </div>
         
@@ -77,7 +77,8 @@
     <script>
         const monsters = [
             '0-01.png', '1-01.png', '1-02.png', '2-01.png', '2-02.png',
-            '2-03.png', '4-01.png', '5-01.png', '5-02.png', '5-03.png'
+            '2-03.png', '3-01.png', '3-02.png', '4-01.png', '5-01.png', 
+            '5-02.png', '5-03.png'
         ];
 
         // 顯示所有小怪物
